@@ -295,7 +295,13 @@ extern "C" {
  */
 + (BOOL) shouldCleanUp;
 
+/** Turns on tracking of retain/release for instances of the receiver.
+ */
 + (void) trackOwnership;
+
+/** Turns on tracking of retain/release for the receiver.
+ */
+- (void) trackOwnership;
 
 @end
 
